fix overf overflow error

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,8 +64,7 @@ footer{
 }
 
 .float-right{
-  position: relative;
-  bottom: 20px;
+  float: right;
 }
 .fixed-right{
   fixed: right;
