--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -12,7 +12,6 @@
 }
 
 .center-homepage-panel{
-  margin-bottom: -20px;
 }
 
 //.fadePanel2{
